--- a/react-testing/src/components/headline/headline.css
+++ b/react-testing/src/components/headline/headline.css
@@ -1,4 +1,1 @@
-.headLine {
-  margin-left: 50px;
-}
-/*# sourceMappingURL=headline.css.map */
+/* No CSS *//*# sourceMappingURL=headline.css.map */
